<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sensorreading.MainActivity" >

    <TextView
        android:id="@+id/text_tilt_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor_tilt" />

    <TextView
        android:id="@+id/text_light_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_tilt_show"
        android:layout_below="@+id/text_tilt_show"
        android:layout_marginTop="20dp"
        android:text="@string/sensor_light" />

    <TextView
        android:id="@+id/text_mag_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_tilt_show"
        android:layout_below="@+id/text_light_show"
        android:layout_marginTop="20dp"
        android:text="@string/sensor_mag" />

    <TextView
        android:id="@+id/text_acc_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_tilt_show"
        android:layout_below="@+id/text_mag_show"
        android:layout_marginTop="20dp"
        android:text="@string/sensor_acc" />
    
    <TextView
        android:id="@+id/text_acclin_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_tilt_show"
        android:layout_below="@+id/text_acc_show"
        android:layout_marginTop="20dp"
        android:text="@string/sensor_acclin" />

    <TextView
        android:id="@+id/text_temp_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_tilt_show"
        android:layout_below="@+id/text_acclin_show"
        android:layout_marginTop="20dp"
        android:text="@string/sensor_temp" />

    <TextView
        android:id="@+id/text_gyro_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_tilt_show"
        android:layout_below="@+id/text_temp_show"
        android:layout_marginTop="20dp"
        android:text="@string/sensor_gyro" />
    
    <TextView
        android:id="@+id/text_ori_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_tilt_show"
        android:layout_below="@+id/text_gyro_show"
        android:layout_marginTop="20dp"
        android:text="@string/sensor_ori" />
    
    <TextView
        android:id="@+id/text_prox_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_tilt_show"
        android:layout_below="@+id/text_ori_show"
        android:layout_marginTop="20dp"
        android:text="@string/sensor_prox" />
    
    <TextView
        android:id="@+id/text_step_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_tilt_show"
        android:layout_below="@+id/text_prox_show"
        android:layout_marginTop="20dp"
        android:text="@string/sensor_step" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignBaseline="@+id/button_start"
        android:layout_alignBottom="@+id/button_start"
        android:layout_alignRight="@+id/button_tick"
        android:text="@string/sensor_stop" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_above="@+id/button_tick"
        android:layout_alignLeft="@+id/text_gyro_show"
        android:layout_marginTop="300dp"
        android:text="@string/sensor_start" />
    
    <Button
        android:id="@+id/button_tick"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/sensor_tick" />

    <TextView
        android:id="@+id/text_baro_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_mag_show"
        android:layout_alignLeft="@+id/text_humi_show"
        android:text="@string/sensor_baro" />

    <TextView
        android:id="@+id/text_humi_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_gyro_show"
        android:layout_alignLeft="@+id/button_stop"
        android:text="@string/sensor_humi" />

</RelativeLayout>
